# NashtaConstruction

./: .gitignore  about.html  contact.html  db.sqlite3  index.html  pyproject.toml  requirements.txt  services.html  team.html
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_time_to_read.py
blog/templates/blog/: base.html  detail.html  list.html
config/: settings.py  urls.py  wsgi.py
css/: style.css
home/: admin.py  forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_page_config_logo.py  0003_config_author_config_description_config_keywords.py  0004_delete_page_config_founder_image.py  0005_rename_testimonial_remark.py
home/templates/: about.html  base.html  contact.html  home.html  services.html
home/templates/components/: _footer.html  _header.html  _hero.html  _navigation.html
home/templatetags/: configuration_manage.py
static/css/: style.css
staticfiles/: staticfiles.json
